team editing & duo requests
